src/Components/Body/styles/tierlist.css
.TierlistContainer {
	margin-top: 4rem;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

.TopOfTierlistContainer {
	display: flex;
	flex-direction: row;
	justify-content: center;
	align-items: center;
	margin-top: 1rem;
	width: 70%;
	gap: 2rem;
	background-color: #141412;
	border-radius: 10px;
	border: 2px solid #383838;
	margin-bottom: 1rem;
}
.listLogoContainer {
	display: flex;
	flex-direction: row;
	justify-content: right;
}

.listLogo {
	height: 12rem;
	border: 1px solid #383838;
}

.TierListTextInfo {
	width: 50%;
	margin-bottom: 3rem;
	display: flex;
	flex-direction: column;
	justify-content: center;
	margin-top: 1rem;
}

.TierListTextInfo > h1 {
	font-size: 3rem;
	text-decoration: underline;
	text-underline-offset: 0.8rem;
	margin-bottom: 2rem;
}

.TierListTextInfo > p {
	font-size: 1.25rem;
}

.TierList {
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	min-width: 50%;
	max-width: 77.5%;
	min-height: 25rem;
	border: 2px solid #383838;
	background-color: #141412;
	border-bottom: none;
	margin-bottom: 1rem;
}

.tier-row {
	border-bottom: #383838 2px solid;
	display: flex;
	flex-wrap: wrap;
	min-height: 6.01rem;
	width: 100%;
}

.tier-name {
	width: 6rem;
	height: 6rem;
	display: flex;
	justify-content: center;
	align-items: center;
	color: black;
	font-size: 1.5rem;
	flex-shrink: 0;
	box-shadow: inset 0 0 0 1px #000000;
}

.characterImages {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
}

.characterImage {
	width: 6rem;
	height: 6rem;
	display: flex;
	justify-content: flex-start;
	flex-shrink: 0;
}

.rowContainer {
	display: flex;
	flex-direction: row;
	height: 6rem;
	width: 100%;
}
.CharacterBank {
	display: flex;
	flex-wrap: wrap;
	width: 65%;
	margin: 1rem;
	padding: 0.5rem;
	background-color: #141412;
	border-radius: 10px;
	border: #383838 1px solid;
}
.characterImageBank {
	height: 5rem;
	width: 5rem;
}

.tierlistButtonContainer {
	display: flex;
	flex-direction: row;
	justify-content: space-around;
	align-items: center;
	width: 50%;
	margin-bottom: 0.5rem;
}
.tierlistButtonContainer > input {
	padding: 0.6em 1.2em;
	background-color: #101010;
	height: 2rem;
}

.tierlistButtonContainer > input:focus {
	outline: none;
	border: 2px solid #7fff7f;
	outline: 4px auto -webkit-focus-ring-color;
}

.tierListButton {
	margin: 0.5rem;
	width: 11rem;
	height: 3rem;
}
.placeholder {
	background-color: #f5f5f5;
	color: #999;
	height: 6rem;
	width: 3rem;
	position: absolute;
	margin-left: 3rem;
}

.placeholder1 {
	background-color: #ff000000;
	color: #99999900;
	height: 6rem;
	width: 3rem;
	margin-right: -3rem;
	z-index: 999;
}

.characterContainer {
	position: relative;
	display: flex;
	align-items: center;
}

